fixed bug City name overflowing its parent div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,7 +212,7 @@ input[type=text] {
     padding-top: 5px;
     padding-bottom: 5px;
     margin: auto;
-    width: 250px;
+    width: 20rem;
 
 }
 
